--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -472,7 +472,6 @@ ul li {
   height: 100%;
   margin-bottom: 0rem;
   text-align: center;
-  color: #fff;
   background: #b80135 no-repeat center center;
   background-size: cover;
 }
@@ -501,13 +500,13 @@ ul li {
 /* The details of your blog. Defined in ghost/settings/ */
 .blog-title {
   margin: 10px 0 10px 0;
-  font-size: 5rem;
+  font-size: 10rem;
   letter-spacing: -1px;
 }
 
 .blog-description {
   margin: 0;
-  font-size: 2.5rem;
+  font-size: 5rem;
   line-height: 1.5em;
   font-weight: 400;
   font-family: "Roboto Slab", serif;
@@ -518,11 +517,12 @@ ul li {
   width: 100%;
   height: 100%;
   background: #f2efe8;
+  color: #2d2628;
   position: relative;
 }
 .post-holder.odd {
-  background: #b80135;
-  color: white;
+  background: #2d2628;
+  color: #f2efe8;
 }
 
 /* Every post, on every page, gets this style on its <article> tag */
@@ -572,8 +572,9 @@ a.fn-item.active {
 
 .post-after {
   position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
   bottom: -40px;
-  right: 6%;
   z-index: 1;
   width: 0;
   height: 0;
@@ -583,7 +584,6 @@ a.fn-item.active {
   border-radius: 25px;
 }
 .post-after.even {
-  left: 6%;
 }
 
 .post-title {
