--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,7 +17,6 @@
     </div>
 </header>
 <main class="content" role="main">
-
     <div class='fixed-nav'>
     </div>
     {{ range $index_val, $elem_val := $sections }}
@@ -30,7 +29,9 @@
                     {{ .Content }}
                 </section>
             </article>
-            <div class='post-after'></div>
+            <div class='post-after'>
+                <i id='post-arrow' class="fa fa-angle-double-down"></i>
+            </div>
         </div>
     {{ end }}
 </main>
