--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -225,6 +225,24 @@ a.btn:hover {
   opacity: 0.9;
 }
 
+#post-arrow {
+  font-size: 120px;
+  margin: -35px auto;
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  bottom: 25px;
+  cursor: pointer;
+  opacity: 0.6;
+  transition: all ease 0.3s;
+  -webkit-transition: all ease 0.3s;
+  -moz-transition: all ease 0.3s;
+}
+#post-arrow:hover {
+  opacity: 0.9;
+}
+
 h1 a,
 h2 a,
 h3 a,
@@ -531,7 +549,7 @@ ul li {
   width: 80%;
   max-width: 700px;
   margin: 0rem auto;
-  padding-bottom: 4rem;
+  padding-bottom: 8rem;
   padding-top: 4rem;
   height: 70%;
   word-break: break-word;
@@ -570,6 +588,7 @@ a.fn-item.active {
   opacity: 1;
 }
 
+/*
 .post-after {
   position: absolute;
   left: 50%;
@@ -585,6 +604,7 @@ a.fn-item.active {
 }
 .post-after.even {
 }
+*/
 
 .post-title {
   margin: 0;
