--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -13,6 +13,10 @@
 {{ with .Site.Params.meta.keywords }}
   <meta name="keywords" content="{{ . }}"
 />{{ end }}
+
+{{ $style := resources.Get "scss/style.scss" | toCSS (dict "targetPath" "css/style.css" "enableSourceMap" true) }}
+<link rel="stylesheet" href="{{ ($style).RelPermalink }}">
+
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
 <meta name="HandheldFriendly" content="True" />
