temporary disable post arrows

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,7 +30,7 @@
                 </section>
             </article>
             <div class='post-after'>
-                <i id='post-arrow' class="fa fa-angle-double-down"></i>
+<!--                <i id='post-arrow' class="fa fa-angle-double-down"></i>-->
             </div>
         </div>
     {{ end }}
