--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,6 +8,7 @@
 
     <!-- We do need jQuery to be loaded before HugoScroll script -->
     <script type="text/javascript" src='{{ "js/jquery-1.11.3.min.js" | absURL }}'></script>
+    <script type="text/javascript" src='{{ "js/bootstrap.bundle.min.js" | absURL }}'></script>
 
     <!-- The main JavaScript files for HugoScroll -->
     <script type="text/javascript" src='{{ "js/icons.js" | absURL }}'></script>
