--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -490,7 +490,7 @@ ul li {
   height: 100%;
   margin-bottom: 0rem;
   text-align: center;
-  background: #b80135 no-repeat center center;
+  background: #2d2628 no-repeat center center;
   background-size: cover;
 }
 
@@ -705,6 +705,7 @@ a.fn-item.active {
 .post-content img {
   display: block;
   max-width: 100%;
+  border-radius: 50% !important;
   margin: 0 auto;
 }
 
