--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,6 +3,9 @@
 {{ $sections := $headless.Resources.ByType "page" }}
 {{ $sections := cond .Site.BuildDrafts $sections (where $sections "Draft" "==" false) }}
 <header id="site-head" {{ with .Params.header_image }}style="background-image: url({{ . }})"{{ end }}>
+    <div class="right position-absolute mx-lg-2" style="top: 0">
+        {{- partial "lang_switch.html" . -}}
+    </div>
     <div class="vertical">
         <div id="site-head-content" class="inner">
 
@@ -18,6 +21,7 @@
 </header>
 <main class="content" role="main">
     <div class='fixed-nav'>
+        {{- partial "lang_switch.html" . -}}
     </div>
     {{ range $index_val, $elem_val := $sections }}
         <div class='post-holder'>
