--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -704,7 +704,7 @@ a.fn-item.active {
 /* Keep large images within the bounds of the post-width */
 .post-content img {
   display: block;
-  max-width: 100%;
+  width: 60%;
   border-radius: 50% !important;
   margin: 0 auto;
 }
