--- a/static/css/fonts.css
+++ b/static/css/fonts.css
@@ -156,6 +156,118 @@
 }
 
 /* ==========================================================================
+   1a. Open Sans Google Fonts
+   ========================================================================== */
+
+/* open-sans-300 */
+@font-face {
+    font-family: 'Open Sans Official';
+    font-style: normal;
+    font-weight: 300;
+    src: local(''),
+    url('../fonts/OpenSans/OpenSans-Light.ttf') format('truetype')
+}
+
+/* open-sans-regular*/
+@font-face {
+    font-family: 'Open Sans Official';
+    font-style: normal;
+    font-weight: 400;
+    src: local(''),
+    url('../fonts/OpenSans/OpenSans-Regular.ttf') format('truetype')
+}
+
+/* open-sans-500*/
+@font-face {
+    font-family: 'Open Sans Official';
+    font-style: normal;
+    font-weight: 500;
+    src: local(''),
+    url('../fonts/OpenSans/OpenSans-Medium.ttf') format('truetype')
+}
+
+/* open-sans-600*/
+@font-face {
+    font-family: 'Open Sans Official';
+    font-style: normal;
+    font-weight: 600;
+    src: local(''),
+    url('../fonts/OpenSans/OpenSans-SemiBold.ttf') format('truetype')
+}
+
+/* open-sans-700 */
+@font-face {
+    font-family: 'Open Sans Official';
+    font-style: normal;
+    font-weight: 700;
+    src: local(''),
+    url('../fonts/OpenSans/OpenSans-Bold.ttf') format('truetype')
+}
+
+/* open-sans-800 */
+@font-face {
+    font-family: 'Open Sans Official';
+    font-style: normal;
+    font-weight: 800;
+    src: local(''),
+    url('../fonts/OpenSans/OpenSans-ExtraBold.ttf') format('truetype')
+}
+/* open-sans-300 Italic */
+@font-face {
+    font-family: 'Open Sans Official';
+    font-style: italic;
+    font-weight: 300;
+    src: local(''),
+    url('../fonts/OpenSans/OpenSans-Light.ttf') format('truetype')
+}
+
+/* open-sans-italic*/
+@font-face {
+    font-family: 'Open Sans Official';
+    font-style: italic;
+    font-weight: 400;
+    src: local(''),
+    url('../fonts/OpenSans/OpenSans-Italic.ttf') format('truetype')
+}
+
+/* open-sans-500 Italic*/
+@font-face {
+    font-family: 'Open Sans Official';
+    font-style: italic;
+    font-weight: 500;
+    src: local(''),
+    url('../fonts/OpenSans/OpenSans-MediumItalic.ttf') format('truetype')
+}
+
+/* open-sans-600 Italic*/
+@font-face {
+    font-family: 'Open Sans Official';
+    font-style: italic;
+    font-weight: 600;
+    src: local(''),
+    url('../fonts/OpenSans/OpenSans-SemiBoldItalic.ttf') format('truetype')
+}
+
+/* open-sans-700 Italic */
+@font-face {
+    font-family: 'Open Sans Official';
+    font-style: italic;
+    font-weight: 700;
+    src: local(''),
+    url('../fonts/OpenSans/OpenSans-BoldItalic.ttf') format('truetype')
+}
+
+/* open-sans-800 Italic */
+@font-face {
+    font-family: 'Open Sans Official';
+    font-style: italic;
+    font-weight: 800;
+    src: local(''),
+    url('../fonts/OpenSans/OpenSans-ExtraBoldItalic.ttf') format('truetype')
+}
+
+
+/* ==========================================================================
    2. Open Sans Condensed
    ========================================================================== */
 
@@ -199,6 +311,41 @@
        url('../fonts/open-sans-condensed-v21-latin-700.woff') format('woff'), /* Modern Browsers */
        url('../fonts/open-sans-condensed-v21-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/open-sans-condensed-v21-latin-700.svg#OpenSansCondensed') format('svg'); /* Legacy iOS */
+}
+
+
+/* ==========================================================================
+   2a. Open Sans Condensed Google
+   ========================================================================== */
+
+/* open-sans-condensed-300 */
+@font-face {
+    font-family: 'OpenSans Condensed Google';
+    font-style: normal;
+    font-weight: 300;
+    src: local(''),
+    url('../fonts/OpenSansCondensedLight.ttf') format('truetype'),
+    url('../fonts/OpenSansCondensedLight.woff') format('woff')
+}
+
+/* open-sans-condensed-300italic */
+@font-face {
+    font-family: 'OpenSans Condensed Google';
+    font-style: italic;
+    font-weight: 300;
+    src: local(''),
+    url('../fonts/OpenSansCondensedLightItalic.woff') format('woff'),
+    url('../fonts/OpenSansCondensedLightItalic.ttf') format('truetype')
+}
+
+/* open-sans-condensed-700 */
+@font-face {
+    font-family: 'OpenSans Condensed Google';
+    font-style: normal;
+    font-weight: 700;
+    src: local(''),
+    url('../fonts/OpenSansCondensedBold.woff') format('woff'),
+    url('../fonts/OpenSansCondensedBold.ttf') format('truetype')
 }
 
 /* ==========================================================================
@@ -246,6 +393,47 @@
        url('../fonts/oswald-v40-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/oswald-v40-latin-700.svg#Oswald') format('svg'); /* Legacy iOS */
 }
+
+/* oswald-300 */
+@font-face {
+    font-family: 'Oswald Google';
+    font-style: normal;
+    font-weight: 300;
+    src: local(''),
+    url('../fonts/Oswald-Light.woff') format('woff'),
+    url('../fonts/Oswald-Light.ttf') format('truetype')
+}
+
+/* oswald-regular*/
+@font-face {
+    font-family: 'Oswald Google';
+    font-style: normal;
+    font-weight: 400;
+    src: local(''),
+    url('../fonts/Oswald-Regular.woff') format('woff'),
+    url('../fonts/Oswald-Regular.ttf') format('truetype')
+}
+
+/* oswald-500 */
+@font-face {
+    font-family: 'Oswald Google';
+    font-style: normal;
+    font-weight: 500;
+    src: local(''),
+    url('../fonts/Oswald-Medium.woff') format('woff'),
+    url('../fonts/Oswald-Medium.ttf') format('truetype')
+}
+
+/* oswald-700*/
+@font-face {
+    font-family: 'Oswald Google';
+    font-style: normal;
+    font-weight: 700;
+    src: local(''),
+    url('../fonts/Oswald-Bold.woff') format('woff'),
+    url('../fonts/Oswald-Bold.ttf') format('truetype')
+}
+
 
 /* ==========================================================================
    4. Roboto Slab
@@ -305,4 +493,48 @@
        url('../fonts/roboto-slab-v16-latin-700.woff') format('woff'), /* Modern Browsers */
        url('../fonts/roboto-slab-v16-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/roboto-slab-v16-latin-700.svg#RobotoSlab') format('svg'); /* Legacy iOS */
+}
+
+/* ==========================================================================
+   4a. Roboto Slab Google
+   ========================================================================== */
+
+/* roboto-slab-100 */
+@font-face {
+    font-family: 'Roboto Slab Google';
+    font-style: normal;
+    font-weight: 100;
+    src: local(''),
+    url('../fonts/RobotoSlab-Thin.woff') format('woff'),
+    url('../fonts/RobotoSlab-Thin.ttf') format('truetype')
+}
+
+/* roboto-slab-300 */
+@font-face {
+    font-family: 'Roboto Slab Google';
+    font-style: normal;
+    font-weight: 300;
+    src: local(''),
+    url('../fonts/RobotoSlab-Light.woff') format('woff'),
+    url('../fonts/RobotoSlab-Light.ttf') format('truetype')
+}
+
+/* roboto-slab-regular */
+@font-face {
+    font-family: 'Roboto Slab Google';
+    font-style: normal;
+    font-weight: 400;
+    src: local(''),
+    url('../fonts/RobotoSlab-Regular.woff') format('woff'),
+    url('../fonts/RobotoSlab-Regular.ttf') format('truetype')
+}
+
+/* roboto-slab-700 */
+@font-face {
+    font-family: 'Roboto Slab Google';
+    font-style: normal;
+    font-weight: 700;
+    src: local(''),
+    url('../fonts/RobotoSlab-Bold.woff') format('woff'),
+    url('../fonts/RobotoSlab-Bold.ttf') format('truetype')
 }
