--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -91,7 +91,8 @@ body {
   height: 100%;
   max-height: 100%;
   /*font-family: 'Droid Serif', serif;*/
-  font-family: "Roboto Slab", serif;
+  font-family: "Open Sans Official", serif;
+  /*font-family: "Roboto Slab", serif;*/
   font-size: 2rem;
   line-height: 1.6em;
   color: #3a4145;
@@ -129,7 +130,7 @@ h6 {
   line-height: 1;
   margin-top: 0;
   margin-bottom: 10px;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans Official", sans-serif;
 }
 h3,
 h4,
@@ -138,7 +139,7 @@ h6 {
   text-rendering: optimizeLegibility;
   line-height: 120%;
   margin-top: 0;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans Official", sans-serif;
   margin-bottom: 0%;
 }
 
@@ -198,7 +199,7 @@ a.btn {
   position: relative;
   margin-top: 2rem;
   cursor: pointer;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald Google", sans-serif;
   text-transform: uppercase;
   font-weight: lighter;
 }
@@ -566,11 +567,11 @@ ul li {
   top: 40px;
   left: 2%;
   z-index: 99999;
-  font-family: "Open Sans Condensed", sans-serif;
+  font-family: "OpenSans Condensed Google", serif;
   text-transform: uppercase;
   font-size: 1.5rem;
   line-height: 130%;
-  font-weight: bold;
+  font-weight: 400;
 }
 a.fn-item {
   display: block;
@@ -623,7 +624,7 @@ a.fn-item.active {
 .post-meta {
   display: inline-block;
   margin: 0 0 5px 0;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans Official", sans-serif;
   font-size: 1.5rem;
   color: #9eabb3;
 }
@@ -781,7 +782,7 @@ a.fn-item.active {
   width: 80%;
   max-width: 700px;
   margin: 4rem auto;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans Official", sans-serif;
   font-size: 1.3rem;
   color: #9eabb3;
   text-align: center;
@@ -829,7 +830,7 @@ a.fn-item.active {
   position: relative;
   margin: 0rem 0 0 0;
   padding: 1rem 0;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans Official", sans-serif;
   font-size: 1.3rem;
   line-height: 1.5em;
   color: #bbc7cc;
