--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -174,7 +174,7 @@ h6 {
 }
 
 a {
-  color: inherit;
+  color: #9fd067;
   transition: all ease 0.3s;
   -webkit-transition: all ease 0.3s;
   -moz-transition: all ease 0.3s;
@@ -571,7 +571,7 @@ ul li {
   text-transform: uppercase;
   font-size: 1.5rem;
   line-height: 130%;
-  font-weight: 400;
+  font-weight: 700;
 }
 a.fn-item {
   display: block;
@@ -987,6 +987,7 @@ a.fn-item.active {
   .post {
     font-size: 0.9em;
     line-height: 1.6em;
+    text-align: justify;
   }
 
   .post-template .post {
