--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,10 +8,13 @@
     </div>
     <div class="vertical">
         <div id="site-head-content" class="inner">
-
-            {{ with .Params.header_headline }}<h1 class="blog-title">{{ . }}</h1>{{ end }}
-            {{ with .Params.header_subheadline }}<h2 class="blog-description">{{ . }}</h2>{{ end }}
-
+            <div id="titles">
+                <div id="blog-logo">
+                    <img src="{{ .Site.Params.logo }}" alt="">
+                </div>
+                {{ with .Params.header_headline }}<h1 class="blog-title">{{ . }}</h1>{{ end }}
+                {{ with .Params.header_subheadline }}<h2 class="blog-description">{{ . }}</h2>{{ end }}
+            </div>
             {{ range where $sections ".Params.header_menu" "eq" true }}
                  <a class='btn site-menu' data-title-anchor='{{ anchorize .Title }}'>{{ .Title }}</a>
             {{ end }}
