--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -97,6 +97,7 @@ body {
   line-height: 1.6em;
   color: #3a4145;
 }
+
 a.fa {
   text-decoration: none;
 }
@@ -209,6 +210,7 @@ a.btn:hover {
 }
 
 #header-arrow {
+  color: #ffffff;
   font-size: 140px;
   margin: -10px auto;
   text-align: center;
@@ -217,7 +219,7 @@ a.btn:hover {
   left: 0;
   bottom: -120px;
   cursor: pointer;
-  opacity: 0.6;
+  opacity: 0.2;
   transition: all ease 0.3s;
   -webkit-transition: all ease 0.3s;
   -moz-transition: all ease 0.3s;
@@ -235,7 +237,7 @@ a.btn:hover {
   left: 0;
   bottom: 25px;
   cursor: pointer;
-  opacity: 0.0;
+  opacity: 0.6;
   transition: all ease 0.3s;
   -webkit-transition: all ease 0.3s;
   -moz-transition: all ease 0.3s;
@@ -491,7 +493,7 @@ ul li {
   height: 100%;
   margin-bottom: 0rem;
   text-align: center;
-  background: #2d2628 no-repeat center center;
+  background: #3e3e41 no-repeat center center;
   background-size: cover;
 }
 
@@ -517,6 +519,11 @@ ul li {
 }
 
 /* The details of your blog. Defined in ghost/settings/ */
+#titles {
+  color: #f2efe8;
+  opacity: 0.9;
+}
+
 .blog-title {
   margin: 10px 0 10px 0;
   font-size: 10rem;
@@ -833,9 +840,9 @@ a.fn-item.active {
   font-family: "Open Sans Official", sans-serif;
   font-size: 1.3rem;
   line-height: 1.5em;
-  color: #bbc7cc;
+  color: #ffffff;
   text-align: center;
-  background: #22343a;
+  background: #3e3e41;
 }
 
 .site-footer a {
