--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -535,7 +535,7 @@ ul li {
   font-size: 5rem;
   line-height: 1.5em;
   font-weight: 400;
-  font-family: "Roboto Slab", serif;
+  font-family: "Roboto Slab Google", serif;
   letter-spacing: 0;
 }
 
